Fix toc spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -21,15 +21,6 @@ body {
     min-height: 100%;
 }
 
-.border-top {
-    border-bottom: 1px dotted #aaa;
-    margin-bottom: 0.7em;
-    margin-left: 2rem;
-    margin-right: 2rem;
-    padding-bottom: 9px;
-    visibility: hidden;
-}
-
 blockquote {
     border-radius: 4px;
     width: 70%;
@@ -155,7 +146,7 @@ aside {
 .content-container {
     margin: 0 1rem 1rem 1rem;
     max-width: 680px;
-    padding-top: 1rem;
+    padding-top: 4rem;
 }
 
 .current {
@@ -191,24 +182,6 @@ footer a {
     padding: 1px 4px;
 }
 
-.footer-logo {
-    display: block;
-    margin: 2rem auto 1.5rem auto;
-    width: 13rem;
-}
-
-.home-handshake {
-    margin: 0 auto;
-    width: 25rem;
-    padding: 0;
-    max-width: 100%;
-    text-align: center;
-}
-
-.home-p {
-    text-align: center;
-}
-
 h1,
 h2,
 h3,
@@ -222,7 +195,6 @@ h1,
     border-radius: 4px;
     display: block;
     margin-right: -0.5rem;
-    z-index: 1;
 }
 
 h2 {
@@ -232,14 +204,6 @@ h2 {
 .highlight {
     margin: 0;
     width: 100%;
-}
-
-.hr-bold {
-    background-color: #000;
-    border-radius: 4px;
-    border-style: none;
-    color: #000;
-    height: 1px;
 }
 
 li {
@@ -319,6 +283,7 @@ pre {
     display: inline-block;
     font-size: 14px;
     padding: 5px 15px 15px 15px;
+    margin: 3rem 0 0 1rem;
     text-align: left;
 }
 
@@ -329,6 +294,10 @@ pre {
     font-weight: bold;
     line-height: 2rem;
     padding: 3px 8px;
+}
+
+.toc-content {
+    margin: -2rem 1rem 0 1.5rem;
 }
 
 .toc-scroll {
@@ -446,13 +415,9 @@ Breakpoint 1 (Dispense with critical mobile styles)
         margin: 0 auto;
     }
 
-    .toc {
-        margin: 3rem 0 1rem 1rem;
-    }
-
-    .toggle-theme {
-        display: inline;
-    }
+    // .toc {
+    //     margin: 3rem 0 0 1rem;
+    // }
 }
 
 /*================================================
@@ -468,7 +433,7 @@ Breakpoint 2 (Table of contents appears)
         position: sticky;
         top: 1rem;
         margin-right: 1rem;
-        margin-top: 14rem;
+        margin-top: 12rem;
     }
 
     .aside-page {
